harden backend for production and unify durable synchronization